--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link
     href="https://fonts.googleapis.com/css?family=Libre+Franklin:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"
     rel="stylesheet" />
+  <link rel="stylesheet" href="index.scss">
 
-
-  <title>React App</title>
+  <title>Frontend Mentor | Ping coming soon page</title>
 </head>
 
 <body>
